refactor: 将配方核心逻辑迁移到RecipeHandlerGroup